obtencion dataframe grupos con categoria

--- a/data_analysis_clustering.ipynb
+++ b/data_analysis_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "#import os\n",
-    "import plotly\n",
     "import plotly.express as px\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from datetime import date\n"
    ]
   },
   {
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1524,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,24 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['codigo del grupo', 'nombre grupo', 'lider', 'avalado', 'estado',\n",
-       "       'clasificado en', 'link_grupos', 'link_perfiles', 'programa', 'area',\n",
-       "       'instituciones', 'fecha_creacion', 'lugar_creacion', 'gran_area',\n",
-       "       'anio'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Show me the column names of groups_data\n",
     "groups_data.columns"
@@ -70,20 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(13081, 15)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# count the number of rows and columns in groups_data\n",
     "groups_data.shape"
@@ -91,20 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5952"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Count the unique values in the column \"codigo del grupo\"\n",
     "groups_data[\"codigo del grupo\"].nunique()\n"
@@ -112,31 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "COL0016775    16\n",
-       "COL0111498    16\n",
-       "COL0078679    16\n",
-       "COL0147768    16\n",
-       "COL0132119    15\n",
-       "              ..\n",
-       "COL0189786     1\n",
-       "COL0187478     1\n",
-       "COL0195747     1\n",
-       "COL0105267     1\n",
-       "COL0211751     1\n",
-       "Name: codigo del grupo, Length: 5952, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a dataframe with the unique values of \"codigo del grupo\" and other column with the number of times that value appears\n",
     "groups_data[\"codigo del grupo\"].value_counts() "
@@ -144,35 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "codigo del grupo    object\n",
-       "nombre grupo        object\n",
-       "lider               object\n",
-       "avalado             object\n",
-       "estado              object\n",
-       "clasificado en      object\n",
-       "link_grupos         object\n",
-       "link_perfiles       object\n",
-       "programa            object\n",
-       "area                object\n",
-       "instituciones       object\n",
-       "fecha_creacion      object\n",
-       "lugar_creacion      object\n",
-       "gran_area           object\n",
-       "anio                 int64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# show me the type of data in each column of groups_data\n",
     "groups_data.dtypes"
@@ -180,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,44 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5952, 14)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Show me the shape of groups_data_filtered\n",
-    "groups_data_filtered.shape"
+    "groups_data_filtered"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['nombre grupo', 'lider', 'avalado', 'estado', 'clasificado en',\n",
-       "       'link_grupos', 'link_perfiles', 'programa', 'area', 'instituciones',\n",
-       "       'fecha_creacion', 'lugar_creacion', 'gran_area', 'anio'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Show me the column names of groups_data_filtered\n",
     "groups_data_filtered.columns"
@@ -245,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,22 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/8y/j69blw9d67l72pygvntywxj00000gn/T/ipykernel_1726/4027708931.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  groups_filtered[\"estado\"] = groups_filtered[\"estado\"].replace(\"Categoría 00\", \"Grupo reconocido\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Change the values equal to \"Categoría 00\" to \"Grupo Reconocido\" in the column \"estado\" from groups_filtered\n",
     "groups_filtered[\"estado\"] = groups_filtered[\"estado\"].replace(\"Categoría 00\", \"Grupo reconocido\")\n"
@@ -288,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,20 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(770, 5)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Show me the shape of estado_instituciones\n",
     "estado_instituciones.shape"
@@ -339,20 +204,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(770, 2)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Show the shape of instituciones_count\n",
     "instituciones_count.shape"
@@ -360,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,30 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/8y/j69blw9d67l72pygvntywxj00000gn/T/ipykernel_1726/869303622.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  groups_filtered[\"years\"] = 2022 - groups_filtered[\"anio\"]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# add a column to groups_filtered called \"years\" with the difference between the current year and the year in the column \"anio\"\n",
-    "groups_filtered[\"years\"] = 2022 - groups_filtered[\"anio\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,18 +244,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export the dataframe groups_filtered to a csv file called \"groups_filtered.csv\"\n",
-    "groups_filtered.to_csv(\"groups_filtered.csv\")"
+    "# add to the dataframe named groups_filtered columns  with the values of the column \"category\"\n",
+    "groups_filtered = pd.get_dummies(groups_filtered, columns=[\"category\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups_filtered.to_csv(\"groups.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#update the dataframe groups_filtered_instituciones with the column \"anio\" with the min value of the column \"anio\" from groups_filtered where instituciones is equal to the index of groups_filtered_instituciones\n",
+    "group = groups_filtered[\"anio\"] = groups_filtered.groupby(\"instituciones\")[\"anio\"].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#merge the dataframe \"groups_filtered\" with the dataframe \"gruop\" by the column \"instutuciones\"\n",
+    "groups_filtered = groups_filtered.merge(group, left_on=\"instituciones\", right_on=\"instituciones\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#delete column anio_x of dataframe groups_filtered\n",
+    "groups_filtered = groups_filtered.drop(columns=[\"anio_x\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rename column anio_y of dataframe groups_filtered to min_anio_institucion\n",
+    "groups_filtered = groups_filtered.rename(columns={\"anio_y\": \"min_anio_institucion\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add a column to groups_filtered called \"years\" with the difference between the current year and the year in the column \"anio\"\n",
+    "groups_filtered[\"years\"] = date.today().year - groups_filtered[\"min_anio_institucion\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups_filtered = groups_filtered.groupby('instituciones').agg(\n",
+    "    {\n",
+    "        'min_anio_institucion':'mean',\n",
+    "        'years':'mean',\n",
+    "        'category_A':'sum',\n",
+    "        'category_A1':'sum',\n",
+    "        'category_B':'sum',\n",
+    "        'category_C':'sum',\n",
+    "        'category_Grupo reconocido':'sum'\n",
+    "    }\n",
+    ").reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups_filtered.to_csv(\"groupsXinstitucion.csv\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.3 64-bit ('scientometrics')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -438,12 +356,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0e3d817cd9519402f68cdcf7a7487951283cf9badd039ddf3087b46d10d3bcd6"
+    "hash": "7679c2132d3f6ce38c9df14d554b39c06862b36a4e6689c81f9ae15bd0911d7d"
    }
   }
  },
