added reserchers and papers analysis

--- a/preprocessing_data_clusters.ipynb
+++ b/preprocessing_data_clusters.ipynb
@@ -1,140 +1,220 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Data getting"
-   ]
+  "cells": [
+    {
+      "cell_type": "raw",
+      "metadata": {},
+      "source": [
+        "---\n",
+        "title: Preprocessing data\n",
+        "author: Sebastian Robledo\n",
+        "date: \"Nov 20, 2022\"\n",
+        "format:\n",
+        "    html:   \n",
+        "        code-fold: true\n",
+        "---"
+      ],
+      "id": "9b2c99b1"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The data is in this link\n",
+        "https://drive.google.com/drive/u/1/folders/1nwv_jgXQhLbLJVh0dVgh9GSzV_VUj821\n"
+      ],
+      "id": "76f42359"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "import pandas as pd\n",
+        "# run file from the root of the project called \"groups_preprocessing.py\"\n",
+        "%run groups_preprocessing.py"
+      ],
+      "id": "fa8bc318",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Preprocessing Groups"
+      ],
+      "id": "58211c4c"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# create a variable called \"groups_raw\" from the url \"https://drive.google.com/file/d/1Ath8osa-9K4jDhrP5_qZ78AT5UwV79hC/view?usp=share_link\"\"\n",
+        "groups_url = \"https://drive.google.com/file/d/1S5Hdhx4aL2MbtxKF6h1TbYd3lg3WZA7j/view?usp=share_link\"\n",
+        "groups_url = 'https://drive.google.com/uc?id=' + groups_url.split('/')[-2]\n",
+        "groups_raw = pd.read_csv(groups_url, encoding='utf-8')\n",
+        "# Run the function \"preprocess_groups\" on the variable \"groups_raw\"\n",
+        "institution_groups = preprocessing_groups_institutions(groups_raw)\n",
+        "del groups_url"
+      ],
+      "id": "e8db6f5b",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Preprocessing products\n",
+        "\n",
+        "## Papers\n"
+      ],
+      "id": "feca0837"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# create a variable called \"groups_raw\" from the url \"https://drive.google.com/file/d/1KrG-06OFCusN2JpgaqtaC4dl6sCpVaaX/view?usp=share_link\"\n",
+        "papers_url = \"https://drive.google.com/file/d/1FVOasDcWgGBX41_6mGyt3LudneR29hfj/view?usp=share_link\"\n",
+        "papers_url = 'https://drive.google.com/uc?id=' + papers_url.split('/')[-2]\n",
+        "papers_raw = pd.read_csv(papers_url, sep=';', encoding='utf-8')\n",
+        "del papers_url\n",
+        "# Group by \"codigo_grupo\" and count the number of values in column \"titulo\", save the data in dataframe called \"dummy\"\n",
+        "# institutions_papers = papers.groupby(['codigo_grupo']).size().reset_index(name='counts')\n",
+        "# Run the function \"preprocessing_groups_papers\" on the variable \"papers_raw\" and \"groups_raw\", save the data in dataframe called \"institutions_papers\"\n",
+        "institutions_papers = preprocessing_groups_papers(papers_raw, groups_raw)"
+      ],
+      "id": "79e77220",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Preprocessing researchers\n"
+      ],
+      "id": "433d8611"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# create a variable called \"researchers_raw\" from the url \"https://drive.google.com/file/d/1FVOasDcWgGBX41_6mGyt3LudneR29hfj/view?usp=sharing\"\n",
+        "researchers_url = \"https://drive.google.com/file/d/1FVOasDcWgGBX41_6mGyt3LudneR29hfj/view?usp=share_link\"\n",
+        "researchers_url = 'https://drive.google.com/uc?id=' + researchers_url.split('/')[-2]\n",
+        "researchers_raw = pd.read_csv(researchers_url, sep=';', encoding='latin-1')"
+      ],
+      "id": "ed09d45e",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "dummy_1= researchers.groupby(['codigo_grupo']).size().reset_index(name='counts')\n",
+        "\n",
+        "researchers_institutions = groups_raw[['codigo del grupo', 'instituciones']].merge(dummy_1, left_on='codigo del grupo', right_on= 'codigo_grupo', how='left')"
+      ],
+      "id": "bbea2403",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# create a variable called \"researchers_raw\" from the url \"https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0\"\n",
+        "researchers = \"https://drive.google.com/file/d/143u1k6A-LZDhhSGvREzNaXYT4aUEZlGN/view?usp=share_link\"\n",
+        "researchers = 'https://drive.google.com/uc?id=' + researchers.split('/')[-2]\n",
+        "researchers = pd.read_csv(\"https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0\")"
+      ],
+      "id": "5a6319f5",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "How many instituciones do we have in reserachers?"
+      ],
+      "id": "f9d30ebb"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# group the variable \"instituciones\" in researchers and count the number of rows in each group and sort them in descending order and save the result in a variable called \"researchers_institutions\"\n",
+        "researchers_institutions = researchers_raw.groupby(\"instituciones\").size().sort_values(ascending=False)"
+      ],
+      "id": "c93f2f2f",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Reading data from papers"
+      ],
+      "id": "b6a72d98"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "url='https://drive.google.com/file/d/1KrG-06OFCusN2JpgaqtaC4dl6sCpVaaX/view?usp=share_link'\n",
+        "url='https://drive.google.com/uc?id=' + url.split('/')[-2]\n",
+        "papers = pd.read_csv(url)"
+      ],
+      "id": "238f6bc2",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Show me the first ten row of papers dataframe\n",
+        "papers.head(10)"
+      ],
+      "id": "54e5f0ff",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "integrantes='https://drive.google.com/file/d/143u1k6A-LZDhhSGvREzNaXYT4aUEZlGN/view?usp=share_link'\n",
+        "integrantes='https://drive.google.com/uc?id=' + integrantes.split('/')[-2]\n",
+        "integrantes = pd.read_csv(integrantes)"
+      ],
+      "id": "9a765973",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# read the data from this url \"https://docs.google.com/spreadsheets/d/1xmA2VoQt3-cOC2b2-s3JQqt28XkS2Uz7erI2lriC-ys/export?format=csv&gid=1353066533\" and remove the first row\n",
+        "resumen = pd.read_csv(\"https://docs.google.com/spreadsheets/d/1xmA2VoQt3-cOC2b2-s3JQqt28XkS2Uz7erI2lriC-ys/export?format=csv&gid=1353066533\", skiprows=1)"
+      ],
+      "id": "fed56404",
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "name": "python3",
+      "language": "python",
+      "display_name": "Python 3 (ipykernel)"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import libraries for data analysis\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Read data from this url \"https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/edit#gid=0\" and save it as groups\n",
-    "groups_raw = pd.read_csv(\"https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0\") \n",
-    "\n",
-    "# Create a dataframe called institutions_groups with the column \"instituciones\" from groups_raw\n",
-    "institutions_groups = groups_raw[\"instituciones\"]\n",
-    "\n",
-    "# Create a dataframe called institutions_groups counting the unique values of the column \"instituciones\" from groups_raw\n",
-    "institutions_groups = institutions_groups.value_counts()\n",
-    "\n",
-    "# Change the name of the column \"instituciones\" to \"groups\" in institutions_groups\n",
-    "institutions_groups = institutions_groups.rename(\"groups\")\n",
-    "\n",
-    "# Remove the strings \"Categoría \" from the column \"estado\" in groups_raw\n",
-    "groups_raw[\"estado\"] = groups_raw[\"estado\"].str.replace(\"Categoría \", \"\")\n",
-    "\n",
-    "# Values equals to \"00\" in the column \"estado\" in groups_raw are replaced by \"Grupo reconocido\"\n",
-    "groups_raw[\"estado\"] = groups_raw[\"estado\"].replace(\"00\", \"Grupo reconocido\")\n",
-    "\n",
-    "# Create a dataframe called institutions_gropus with the matrix of the values in the column \"instituciones\" and \"estado\" from groups_raw\n",
-    "institutions_category = pd.crosstab(groups_raw[\"instituciones\"], groups_raw[\"estado\"])\n",
-    "\n",
-    "# Create a dataframe called institutions_year with the unique values of \"instituciones\" and \"anio\" from groups_raw\n",
-    "institutions_year = groups_raw[[\"instituciones\", \"anio\"]].drop_duplicates()\n",
-    "\n",
-    "# From institutions_year, group by \"instituciones\" and filter by the lowest value of \"anio\"\n",
-    "institutions_year = institutions_year.groupby(\"instituciones\").min()\n",
-    "\n",
-    "# Create a dataframe called institutions_cleaned by merging institutions_groups, institutions_category and institutions_year\n",
-    "institutions_cleaned = institutions_groups.to_frame().merge(institutions_category, left_index=True, right_index=True).merge(institutions_year, left_index=True, right_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a function with the name \"preprocessing_data_clusters\" that receives the dataframe \"data\" as a parameter and run all the code above\n",
-    "def preprocessing_groups_institutions(data):\n",
-    "    # Create a dataframe called institutions_groups with the column \"instituciones\" from groups_raw\n",
-    "    institutions_groups = data[\"instituciones\"]\n",
-    "\n",
-    "    # Create a dataframe called institutions_groups counting the unique values of the column \"instituciones\" from groups_raw\n",
-    "    institutions_groups = institutions_groups.value_counts()\n",
-    "\n",
-    "    # Change the name of the column \"instituciones\" to \"groups\" in institutions_groups\n",
-    "    institutions_groups = institutions_groups.rename(\"groups\")\n",
-    "\n",
-    "    # Remove the strings \"Categoría \" from the column \"estado\" in groups_raw\n",
-    "    data[\"estado\"] = data[\"estado\"].str.replace(\"Categoría \", \"\")\n",
-    "\n",
-    "    # Values equals to \"00\" in the column \"estado\" in groups_raw are replaced by \"Grupo reconocido\"\n",
-    "    data[\"estado\"] = data[\"estado\"].replace(\"00\", \"Grupo reconocido\")\n",
-    "\n",
-    "    # Create a dataframe called institutions_gropus with the matrix of the values in the column \"instituciones\" and \"estado\" from groups_raw\n",
-    "    institutions_category = pd.crosstab(data[\"instituciones\"], data[\"estado\"])\n",
-    "\n",
-    "    # Create a dataframe called institutions_year with the unique values of \"instituciones\" and \"anio\" from groups_raw\n",
-    "    institutions_year = data[[\"instituciones\", \"anio\"]].drop_duplicates()\n",
-    "\n",
-    "    # From institutions_year, group by \"instituciones\" and filter by the lowest value of \"anio\"\n",
-    "    institutions_year = institutions_year.groupby(\"instituciones\").min()\n",
-    "\n",
-    "    # Create a dataframe called institutions_cleaned by merging institutions_groups, institutions_category and institutions_year\n",
-    "    institutions_cleaned = institutions_groups.to_frame().merge(institutions_category, left_index=True, right_index=True).merge(institutions_year, left_index=True, right_index=True)\n",
-    "    \n",
-    "    return institutions_cleaned\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a dataframe called institutions_cleaned by running the function \"preprocessing_data_clusters\" with the dataframe \"groups_raw\" as a parameter\n",
-    "institutions_cleaned = preprocessing_data_clusters(groups_raw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del institutions_cleaned\n",
-    "del institutions_category\n",
-    "del institutions_groups\n",
-    "del institutions_year"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3.10.3 64-bit ('scientometrics')",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.3"
-  },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "0e3d817cd9519402f68cdcf7a7487951283cf9badd039ddf3087b46d10d3bcd6"
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
